# sjvair-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py  index.md  license.md
docs/_ext/: openapi_renderer.py
docs/_static/: extra.css  openapi-dropdown-links.js
docs/_static/favicon/: browserconfig.xml
docs/_templates/: base.html
docs/_templates/components/: foot-copyright.html
docs/api/: reference.md
docs/assets/favicon/: browserconfig.xml  site.webmanifest
docs/cli/: guide.md  quickstart.md  reference.md  troubleshooting.md  usage.md
docs/cli/data-export/: calenviroscreen.md  calheatscore.md  ceidars.md  forecasts.md  hms.md  index.md  monitors.md  pesticides.md  regions.md  tempo.md
docs/cli/maps/: index.md  static.md  timelapse.md
docs/client/: bulk-export.md  configuration.md  guide.md  maps.md  output-formats.md  quickstart.md  reference.md  usage.md
docs/client/resources/: calenviroscreen.md  calheatscore.md  ceidars.md  forecasts.md  hms.md  index.md  monitors.md  pesticides.md  regions.md  tempo.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-06-26-sjvair-toolkit.md  2026-07-03-docs-site.md  2026-07-06-map-timelapse-cli.md  2026-07-07-sphinx-docs-migration.md  2026-07-11-cli-docs-env-completion-troubleshooting.md  2026-07-11-regions-search-command.md  2026-07-12-calenviroscreen5-calheatscore.md  2026-07-12-monitors-device-filter.md  2026-07-12-timelapse-workers.md  2026-07-13-tempo.md
docs/superpowers/specs/: 2026-06-25-sjvair-toolkit-design.md  2026-07-03-docs-site-design.md  2026-07-06-timelapse-design.md  2026-07-07-sphinx-docs-migration-design.md  2026-07-11-cli-docs-env-completion-troubleshooting-design.md  2026-07-11-regions-search-command-design.md  2026-07-12-calenviroscreen5-calheatscore-design.md  2026-07-12-monitors-device-filter-design.md  2026-07-12-sjvapcd-forecast-design.md  2026-07-12-tempo-design.md  2026-07-12-timelapse-workers-design.md
overrides/: main.html
scripts/: data-export.py
sjvair/: __init__.py  client.py  exceptions.py  formatters.py  maps.py
sjvair/cli/: main.py  mapping.py  utils.py
sjvair/cli/commands/: calenviroscreen.py  calheatscore.py  ceidars.py  forecasts.py  hms.py  pesticides.py  tempo.py
sjvair/cli/commands/map/: __init__.py  create.py
sjvair/cli/commands/monitors/: __init__.py  closest.py  current.py  entries.py  get.py  list.py  summaries.py
sjvair/cli/commands/regions/: __init__.py  get.py  list.py  search.py  summaries.py
sjvair/export/: engine.py  formats.py
sjvair/resources/: __init__.py  calenviroscreen.py  calheatscore.py  ceidars.py  forecasts.py  hms.py  monitors.py  pesticides.py  regions.py  tempo.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_formatters.py  test_live.py  test_maps.py  test_package.py
tests/test_cli/: test_calenviroscreen.py  test_calheatscore.py  test_forecasts.py  test_main.py  test_map.py  test_mapping.py  test_monitors.py  test_monitors_closest_current.py  test_regions.py  test_tempo.py  test_timelapse.py  test_timelapse_parallel.py  test_utils.py
tests/test_export/: test_engine.py  test_formats.py
tests/test_resources/: test_base.py  test_calenviroscreen.py  test_calheatscore.py  test_ceidars.py  test_forecasts.py  test_hms.py  test_monitors.py  test_pesticides.py  test_regions.py  test_tempo.py
(+3 files in other folders)
